2012-11-12  János Badics  <jbadics@inf.u-szeged.hu>

        [Qt] REGRESSION(r134205): gardening. Skipped 2 failing reftests.
        https://bugs.webkit.org/show_bug.cgi?id=101933

        Reviewed by Csaba Osztrogonác.

        * platform/qt/TestExpectations:

2012-11-12  Tommy Widenflycht  <tommyw@google.com>

        Remove the V8 custom code for WebSockets constructor
        https://bugs.webkit.org/show_bug.cgi?id=100801

        Reviewed by Kentaro Hara.

        Added test for null argument to WebSocket(url).

        * http/tests/websocket/tests/hybi/url-parsing-expected.txt:
        * http/tests/websocket/tests/hybi/url-parsing.html:
        * platform/chromium-win/websocket/tests/url-parsing-expected.txt:
        * platform/chromium/http/tests/websocket/tests/hixie76/url-parsing-expected.txt:
        * platform/chromium/http/tests/websocket/tests/hybi/url-parsing-expected.txt:

2012-11-12  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] Pixel tests need rebaseline
        https://bugs.webkit.org/show_bug.cgi?id=99323

        Unreviewed gardening.

        Fix my previous gardening commit: s/-actual.png/-expected.png

        * platform/qt/css3/filters/effect-reference-ordering-hw-expected.png: Renamed from LayoutTests/platform/qt/css3/filters/effect-reference-ordering-hw-actual.png.
        * platform/qt/fast/images/png-suite/test-expected.png: Renamed from LayoutTests/platform/qt/fast/images/png-suite/test-actual.png.
        * platform/qt/svg/as-image/image-respects-pageScaleFactor-change-expected.png: Renamed from LayoutTests/platform/qt/svg/as-image/image-respects-pageScaleFactor-change-actual.png.
        * platform/qt/svg/as-object/embedded-svg-size-changes-expected.png: Renamed from LayoutTests/platform/qt/svg/as-object/embedded-svg-size-changes-actual.png.
        * platform/qt/svg/as-object/nested-embedded-svg-size-changes-expected.png: Renamed from LayoutTests/platform/qt/svg/as-object/nested-embedded-svg-size-changes-actual.png.