@@ -54,6 +54,19 @@ function test()
         var uiSourceCodes = WebInspector.workspace.uiSourceCodes();
         var urls = uiSourceCodes.map(function(uiSourceCode) { return uiSourceCode.parsedURL.lastPathComponent; });
         urls.sort();
+        
+        var whiteList = ["debugger-test.js", "dynamic-script.js", "dynamic-scripts.html", "evalSourceURL.js", "inspector-test.js", "scriptElementContentSourceURL.js"];
+        function filter(url)
+        {
+            for (var i = 0; i < whiteList.length; ++i) {
+                if (url.indexOf(whiteList[i]) !== -1)
+                    return true;
+            }
+                
+            return false;
+        }
+        urls = urls.filter(filter);
+
         InspectorTest.addResult("UISourceCodes:");
         for (var i = 0; i < urls.length; ++i)
             InspectorTest.addResult("    " + urls[i]);
