@@ -1,3 +1,14 @@
+2012-11-12  Vsevolod Vlasov  <vsevik@chromium.org>
+
+        Layout Test inspector/debugger/dynamic-scripts.html is flaky
+        https://bugs.webkit.org/show_bug.cgi?id=99338
+
+        Unreviewed inspector tests flakiness fix.
+
+        * http/tests/inspector-enabled/dynamic-scripts.html:
+        * inspector/debugger/dynamic-scripts.html:
+        * platform/chromium/TestExpectations:
+
 2012-11-12  János Badics  <jbadics@inf.u-szeged.hu>
 
         [Qt] REGRESSION(r134205): gardening. Skipped 2 failing reftests.
